@@ -22,6 +22,7 @@ package com.sun.max.vm.value;
 
 import java.io.*;
 
+import com.sun.cri.ci.*;
 import com.sun.max.lang.*;
 import com.sun.max.unsafe.*;
 import com.sun.max.vm.type.*;
@@ -84,7 +85,7 @@ public final class BooleanValue extends PrimitiveValue<BooleanValue> {
 
     @Override
     public Boolean asBoxedJavaValue() {
-        return new Boolean(value);
+        return Boolean.valueOf(value);
     }
 
     @Override
@@ -183,5 +184,10 @@ public final class BooleanValue extends PrimitiveValue<BooleanValue> {
     @Override
     public void write(DataOutput stream) throws IOException {
         stream.writeBoolean(value);
+    }
+
+    @Override
+    public CiConstant asCiConstant() {
+        return CiConstant.forBoolean(value);
     }
 }
