@@ -22,6 +22,7 @@ package com.sun.max.vm.value;
 
 import java.io.*;
 
+import com.sun.cri.ci.*;
 import com.sun.max.lang.*;
 import com.sun.max.unsafe.*;
 import com.sun.max.vm.type.*;
@@ -105,7 +106,7 @@ public final class ByteValue extends PrimitiveValue<ByteValue> {
 
     @Override
     public Byte asBoxedJavaValue() {
-        return new Byte(value);
+        return Byte.valueOf(value);
     }
 
     @Override
@@ -211,5 +212,10 @@ public final class ByteValue extends PrimitiveValue<ByteValue> {
     @Override
     public void write(DataOutput stream) throws IOException {
         stream.writeByte(value);
+    }
+
+    @Override
+    public CiConstant asCiConstant() {
+        return CiConstant.forByte(value);
     }
 }
